--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
  </header>
  <main>
 <h1 id="pageName"></h1>
-<h2 class="learned">What I learned</h2>
+<h2 class="learned">I learned how to:</h2>
 <ul class="objectives">
-<li> content</li>
-<li> content</li>
-<li> content</li>
-<li> content</li>
-<li> content</li>
+<li>Dynamically insert the date into the page using JavaScript</li>
+<li>Use a prompt to ask for the users first name</li>
+<li> Insert the users name into the page using JavaScript</li>
+<li>Push your webpage code to a GitHub repo</li>
+<li>Load my h1 and h2 through JavaScript</li>
 </ul>
 
 <h2 class="learned"> Today is
