--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <h2 id="slogan"></h2>
  </header>
  <main>
-<h1 id="pageName"></h1>
+<h1 id="pageName">Joe's Bed and Breakfast Assignment</h1>
 <h2 class="learned">I learned how to:</h2>
 <ul class="objectives">
 <li>Dynamically insert the date into the page using JavaScript</li>
